Fix blur on safari

--- a/content/css/base.css
+++ b/content/css/base.css
@@ -113,13 +113,13 @@ code {
 }
 
 .topnav {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
     overflow: hidden;
-    background-color: var(--nav-bg);
+    background-color: rgba(49, 49, 49, 0.295); /* Ensure background has transparency */
     position: sticky;
     top: 0;
     z-index: 1000;
-    backdrop-filter: blur(10px);
-    --webkit-backdrop-filter: blur(10px);
     display: flex;
     align-items: center;
 }
